// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ratings should correctly match the snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Ratings />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h2>
          rate your shot
        </h2>,
        <div
          className="ratings-area"
        >
          <div
            className="great-shot"
          >
            <button
              className="active-false"
              onClick={[Function]}
              value={3}
            >
              great
            </button>
          </div>
          <div
            className="ok-shot"
          >
            <button
              className="active-false"
              onClick={[Function]}
              value={2}
            >
              pull
            </button>
            <button
              className="active-false"
              onClick={[Function]}
              value={4}
            >
              push
            </button>
          </div>
          <div
            className="bad-shot"
          >
            <button
              className="active-false"
              onClick={[Function]}
              value={1}
            >
              hook
            </button>
            <button
              className="active-false"
              onClick={[Function]}
              value={6}
            >
              duff
            </button>
            <button
              className="active-false"
              onClick={[Function]}
              value={5}
            >
              slice
            </button>
          </div>
        </div>,
        <button
          className="save-shot"
          onClick={[Function]}
        >
          Save Shot
        </button>,
      ],
      "className": "ratings",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "rate your shot",
        },
        "ref": null,
        "rendered": "rate your shot",
        "type": "h2",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="great-shot"
            >
              <button
                className="active-false"
                onClick={[Function]}
                value={3}
              >
                great
              </button>
            </div>,
            <div
              className="ok-shot"
            >
              <button
                className="active-false"
                onClick={[Function]}
                value={2}
              >
                pull
              </button>
              <button
                className="active-false"
                onClick={[Function]}
                value={4}
              >
                push
              </button>
            </div>,
            <div
              className="bad-shot"
            >
              <button
                className="active-false"
                onClick={[Function]}
                value={1}
              >
                hook
              </button>
              <button
                className="active-false"
                onClick={[Function]}
                value={6}
              >
                duff
              </button>
              <button
                className="active-false"
                onClick={[Function]}
                value={5}
              >
                slice
              </button>
            </div>,
          ],
          "className": "ratings-area",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <button
                className="active-false"
                onClick={[Function]}
                value={3}
              >
                great
              </button>,
              "className": "great-shot",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "great",
                "className": "active-false",
                "onClick": [Function],
                "value": 3,
              },
              "ref": null,
              "rendered": "great",
              "type": "button",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <button
                  className="active-false"
                  onClick={[Function]}
                  value={2}
                >
                  pull
                </button>,
                <button
                  className="active-false"
                  onClick={[Function]}
                  value={4}
                >
                  push
                </button>,
              ],
              "className": "ok-shot",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "pull",
                  "className": "active-false",
                  "onClick": [Function],
                  "value": 2,
                },
                "ref": null,
                "rendered": "pull",
                "type": "button",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "push",
                  "className": "active-false",
                  "onClick": [Function],
                  "value": 4,
                },
                "ref": null,
                "rendered": "push",
                "type": "button",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <button
                  className="active-false"
                  onClick={[Function]}
                  value={1}
                >
                  hook
                </button>,
                <button
                  className="active-false"
                  onClick={[Function]}
                  value={6}
                >
                  duff
                </button>,
                <button
                  className="active-false"
                  onClick={[Function]}
                  value={5}
                >
                  slice
                </button>,
              ],
              "className": "bad-shot",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "hook",
                  "className": "active-false",
                  "onClick": [Function],
                  "value": 1,
                },
                "ref": null,
                "rendered": "hook",
                "type": "button",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "duff",
                  "className": "active-false",
                  "onClick": [Function],
                  "value": 6,
                },
                "ref": null,
                "rendered": "duff",
                "type": "button",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "slice",
                  "className": "active-false",
                  "onClick": [Function],
                  "value": 5,
                },
                "ref": null,
                "rendered": "slice",
                "type": "button",
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Save Shot",
          "className": "save-shot",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": "Save Shot",
        "type": "button",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h2>
            rate your shot
          </h2>,
          <div
            className="ratings-area"
          >
            <div
              className="great-shot"
            >
              <button
                className="active-false"
                onClick={[Function]}
                value={3}
              >
                great
              </button>
            </div>
            <div
              className="ok-shot"
            >
              <button
                className="active-false"
                onClick={[Function]}
                value={2}
              >
                pull
              </button>
              <button
                className="active-false"
                onClick={[Function]}
                value={4}
              >
                push
              </button>
            </div>
            <div
              className="bad-shot"
            >
              <button
                className="active-false"
                onClick={[Function]}
                value={1}
              >
                hook
              </button>
              <button
                className="active-false"
                onClick={[Function]}
                value={6}
              >
                duff
              </button>
              <button
                className="active-false"
                onClick={[Function]}
                value={5}
              >
                slice
              </button>
            </div>
          </div>,
          <button
            className="save-shot"
            onClick={[Function]}
          >
            Save Shot
          </button>,
        ],
        "className": "ratings",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "rate your shot",
          },
          "ref": null,
          "rendered": "rate your shot",
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="great-shot"
              >
                <button
                  className="active-false"
                  onClick={[Function]}
                  value={3}
                >
                  great
                </button>
              </div>,
              <div
                className="ok-shot"
              >
                <button
                  className="active-false"
                  onClick={[Function]}
                  value={2}
                >
                  pull
                </button>
                <button
                  className="active-false"
                  onClick={[Function]}
                  value={4}
                >
                  push
                </button>
              </div>,
              <div
                className="bad-shot"
              >
                <button
                  className="active-false"
                  onClick={[Function]}
                  value={1}
                >
                  hook
                </button>
                <button
                  className="active-false"
                  onClick={[Function]}
                  value={6}
                >
                  duff
                </button>
                <button
                  className="active-false"
                  onClick={[Function]}
                  value={5}
                >
                  slice
                </button>
              </div>,
            ],
            "className": "ratings-area",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <button
                  className="active-false"
                  onClick={[Function]}
                  value={3}
                >
                  great
                </button>,
                "className": "great-shot",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "great",
                  "className": "active-false",
                  "onClick": [Function],
                  "value": 3,
                },
                "ref": null,
                "rendered": "great",
                "type": "button",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <button
                    className="active-false"
                    onClick={[Function]}
                    value={2}
                  >
                    pull
                  </button>,
                  <button
                    className="active-false"
                    onClick={[Function]}
                    value={4}
                  >
                    push
                  </button>,
                ],
                "className": "ok-shot",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "pull",
                    "className": "active-false",
                    "onClick": [Function],
                    "value": 2,
                  },
                  "ref": null,
                  "rendered": "pull",
                  "type": "button",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "push",
                    "className": "active-false",
                    "onClick": [Function],
                    "value": 4,
                  },
                  "ref": null,
                  "rendered": "push",
                  "type": "button",
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <button
                    className="active-false"
                    onClick={[Function]}
                    value={1}
                  >
                    hook
                  </button>,
                  <button
                    className="active-false"
                    onClick={[Function]}
                    value={6}
                  >
                    duff
                  </button>,
                  <button
                    className="active-false"
                    onClick={[Function]}
                    value={5}
                  >
                    slice
                  </button>,
                ],
                "className": "bad-shot",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "hook",
                    "className": "active-false",
                    "onClick": [Function],
                    "value": 1,
                  },
                  "ref": null,
                  "rendered": "hook",
                  "type": "button",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "duff",
                    "className": "active-false",
                    "onClick": [Function],
                    "value": 6,
                  },
                  "ref": null,
                  "rendered": "duff",
                  "type": "button",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "slice",
                    "className": "active-false",
                    "onClick": [Function],
                    "value": 5,
                  },
                  "ref": null,
                  "rendered": "slice",
                  "type": "button",
                },
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Save Shot",
            "className": "save-shot",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": "Save Shot",
          "type": "button",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`Ratings should correctly match the snapshot 2`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Ratings
    changeFilter={[MockFunction]}
    club="irons"
    handleData={[MockFunction]}
    random={[MockFunction]}
    setLastShot={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h2>
          rate your shot
        </h2>,
        <div
          className="ratings-area"
        >
          <div
            className="great-shot"
          >
            <button
              className="active-false"
              onClick={[Function]}
              value={3}
            >
              great
            </button>
          </div>
          <div
            className="ok-shot"
          >
            <button
              className="active-false"
              onClick={[Function]}
              value={2}
            >
              pull
            </button>
            <button
              className="active-false"
              onClick={[Function]}
              value={4}
            >
              push
            </button>
          </div>
          <div
            className="bad-shot"
          >
            <button
              className="active-false"
              onClick={[Function]}
              value={1}
            >
              hook
            </button>
            <button
              className="active-false"
              onClick={[Function]}
              value={6}
            >
              duff
            </button>
            <button
              className="active-false"
              onClick={[Function]}
              value={5}
            >
              slice
            </button>
          </div>
        </div>,
        <button
          className="save-shot"
          onClick={[Function]}
        >
          Save Shot
        </button>,
      ],
      "className": "ratings",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "rate your shot",
        },
        "ref": null,
        "rendered": "rate your shot",
        "type": "h2",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="great-shot"
            >
              <button
                className="active-false"
                onClick={[Function]}
                value={3}
              >
                great
              </button>
            </div>,
            <div
              className="ok-shot"
            >
              <button
                className="active-false"
                onClick={[Function]}
                value={2}
              >
                pull
              </button>
              <button
                className="active-false"
                onClick={[Function]}
                value={4}
              >
                push
              </button>
            </div>,
            <div
              className="bad-shot"
            >
              <button
                className="active-false"
                onClick={[Function]}
                value={1}
              >
                hook
              </button>
              <button
                className="active-false"
                onClick={[Function]}
                value={6}
              >
                duff
              </button>
              <button
                className="active-false"
                onClick={[Function]}
                value={5}
              >
                slice
              </button>
            </div>,
          ],
          "className": "ratings-area",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <button
                className="active-false"
                onClick={[Function]}
                value={3}
              >
                great
              </button>,
              "className": "great-shot",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "great",
                "className": "active-false",
                "onClick": [Function],
                "value": 3,
              },
              "ref": null,
              "rendered": "great",
              "type": "button",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <button
                  className="active-false"
                  onClick={[Function]}
                  value={2}
                >
                  pull
                </button>,
                <button
                  className="active-false"
                  onClick={[Function]}
                  value={4}
                >
                  push
                </button>,
              ],
              "className": "ok-shot",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "pull",
                  "className": "active-false",
                  "onClick": [Function],
                  "value": 2,
                },
                "ref": null,
                "rendered": "pull",
                "type": "button",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "push",
                  "className": "active-false",
                  "onClick": [Function],
                  "value": 4,
                },
                "ref": null,
                "rendered": "push",
                "type": "button",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <button
                  className="active-false"
                  onClick={[Function]}
                  value={1}
                >
                  hook
                </button>,
                <button
                  className="active-false"
                  onClick={[Function]}
                  value={6}
                >
                  duff
                </button>,
                <button
                  className="active-false"
                  onClick={[Function]}
                  value={5}
                >
                  slice
                </button>,
              ],
              "className": "bad-shot",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "hook",
                  "className": "active-false",
                  "onClick": [Function],
                  "value": 1,
                },
                "ref": null,
                "rendered": "hook",
                "type": "button",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "duff",
                  "className": "active-false",
                  "onClick": [Function],
                  "value": 6,
                },
                "ref": null,
                "rendered": "duff",
                "type": "button",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "slice",
                  "className": "active-false",
                  "onClick": [Function],
                  "value": 5,
                },
                "ref": null,
                "rendered": "slice",
                "type": "button",
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Save Shot",
          "className": "save-shot",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": "Save Shot",
        "type": "button",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h2>
            rate your shot
          </h2>,
          <div
            className="ratings-area"
          >
            <div
              className="great-shot"
            >
              <button
                className="active-false"
                onClick={[Function]}
                value={3}
              >
                great
              </button>
            </div>
            <div
              className="ok-shot"
            >
              <button
                className="active-false"
                onClick={[Function]}
                value={2}
              >
                pull
              </button>
              <button
                className="active-false"
                onClick={[Function]}
                value={4}
              >
                push
              </button>
            </div>
            <div
              className="bad-shot"
            >
              <button
                className="active-false"
                onClick={[Function]}
                value={1}
              >
                hook
              </button>
              <button
                className="active-false"
                onClick={[Function]}
                value={6}
              >
                duff
              </button>
              <button
                className="active-false"
                onClick={[Function]}
                value={5}
              >
                slice
              </button>
            </div>
          </div>,
          <button
            className="save-shot"
            onClick={[Function]}
          >
            Save Shot
          </button>,
        ],
        "className": "ratings",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "rate your shot",
          },
          "ref": null,
          "rendered": "rate your shot",
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="great-shot"
              >
                <button
                  className="active-false"
                  onClick={[Function]}
                  value={3}
                >
                  great
                </button>
              </div>,
              <div
                className="ok-shot"
              >
                <button
                  className="active-false"
                  onClick={[Function]}
                  value={2}
                >
                  pull
                </button>
                <button
                  className="active-false"
                  onClick={[Function]}
                  value={4}
                >
                  push
                </button>
              </div>,
              <div
                className="bad-shot"
              >
                <button
                  className="active-false"
                  onClick={[Function]}
                  value={1}
                >
                  hook
                </button>
                <button
                  className="active-false"
                  onClick={[Function]}
                  value={6}
                >
                  duff
                </button>
                <button
                  className="active-false"
                  onClick={[Function]}
                  value={5}
                >
                  slice
                </button>
              </div>,
            ],
            "className": "ratings-area",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <button
                  className="active-false"
                  onClick={[Function]}
                  value={3}
                >
                  great
                </button>,
                "className": "great-shot",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "great",
                  "className": "active-false",
                  "onClick": [Function],
                  "value": 3,
                },
                "ref": null,
                "rendered": "great",
                "type": "button",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <button
                    className="active-false"
                    onClick={[Function]}
                    value={2}
                  >
                    pull
                  </button>,
                  <button
                    className="active-false"
                    onClick={[Function]}
                    value={4}
                  >
                    push
                  </button>,
                ],
                "className": "ok-shot",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "pull",
                    "className": "active-false",
                    "onClick": [Function],
                    "value": 2,
                  },
                  "ref": null,
                  "rendered": "pull",
                  "type": "button",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "push",
                    "className": "active-false",
                    "onClick": [Function],
                    "value": 4,
                  },
                  "ref": null,
                  "rendered": "push",
                  "type": "button",
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <button
                    className="active-false"
                    onClick={[Function]}
                    value={1}
                  >
                    hook
                  </button>,
                  <button
                    className="active-false"
                    onClick={[Function]}
                    value={6}
                  >
                    duff
                  </button>,
                  <button
                    className="active-false"
                    onClick={[Function]}
                    value={5}
                  >
                    slice
                  </button>,
                ],
                "className": "bad-shot",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "hook",
                    "className": "active-false",
                    "onClick": [Function],
                    "value": 1,
                  },
                  "ref": null,
                  "rendered": "hook",
                  "type": "button",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "duff",
                    "className": "active-false",
                    "onClick": [Function],
                    "value": 6,
                  },
                  "ref": null,
                  "rendered": "duff",
                  "type": "button",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "slice",
                    "className": "active-false",
                    "onClick": [Function],
                    "value": 5,
                  },
                  "ref": null,
                  "rendered": "slice",
                  "type": "button",
                },
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Save Shot",
            "className": "save-shot",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": "Save Shot",
          "type": "button",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`Ratings should correctly match the snapshot 3`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Ratings
    changeFilter={[MockFunction]}
    club="wedges"
    handleData={[MockFunction]}
    random={[MockFunction]}
    setLastShot={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h2>
          rate your shot
        </h2>,
        <div
          className="ratings-area"
        >
          <div
            className="great-shot"
          >
            <button
              className="active-false"
              onClick={[Function]}
              value={3}
            >
              great
            </button>
          </div>
          <div
            className="ok-shot"
          >
            <button
              className="active-false"
              onClick={[Function]}
              value={2}
            >
              pull
            </button>
            <button
              className="active-false"
              onClick={[Function]}
              value={4}
            >
              push
            </button>
          </div>
          <div
            className="bad-shot"
          >
            <button
              className="active-false"
              onClick={[Function]}
              value={1}
            >
              hook
            </button>
            <button
              className="active-false"
              onClick={[Function]}
              value={6}
            >
              duff
            </button>
            <button
              className="active-false"
              onClick={[Function]}
              value={5}
            >
              slice
            </button>
          </div>
        </div>,
        <button
          className="save-shot"
          onClick={[Function]}
        >
          Save Shot
        </button>,
      ],
      "className": "ratings",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "rate your shot",
        },
        "ref": null,
        "rendered": "rate your shot",
        "type": "h2",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="great-shot"
            >
              <button
                className="active-false"
                onClick={[Function]}
                value={3}
              >
                great
              </button>
            </div>,
            <div
              className="ok-shot"
            >
              <button
                className="active-false"
                onClick={[Function]}
                value={2}
              >
                pull
              </button>
              <button
                className="active-false"
                onClick={[Function]}
                value={4}
              >
                push
              </button>
            </div>,
            <div
              className="bad-shot"
            >
              <button
                className="active-false"
                onClick={[Function]}
                value={1}
              >
                hook
              </button>
              <button
                className="active-false"
                onClick={[Function]}
                value={6}
              >
                duff
              </button>
              <button
                className="active-false"
                onClick={[Function]}
                value={5}
              >
                slice
              </button>
            </div>,
          ],
          "className": "ratings-area",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <button
                className="active-false"
                onClick={[Function]}
                value={3}
              >
                great
              </button>,
              "className": "great-shot",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "great",
                "className": "active-false",
                "onClick": [Function],
                "value": 3,
              },
              "ref": null,
              "rendered": "great",
              "type": "button",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <button
                  className="active-false"
                  onClick={[Function]}
                  value={2}
                >
                  pull
                </button>,
                <button
                  className="active-false"
                  onClick={[Function]}
                  value={4}
                >
                  push
                </button>,
              ],
              "className": "ok-shot",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "pull",
                  "className": "active-false",
                  "onClick": [Function],
                  "value": 2,
                },
                "ref": null,
                "rendered": "pull",
                "type": "button",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "push",
                  "className": "active-false",
                  "onClick": [Function],
                  "value": 4,
                },
                "ref": null,
                "rendered": "push",
                "type": "button",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <button
                  className="active-false"
                  onClick={[Function]}
                  value={1}
                >
                  hook
                </button>,
                <button
                  className="active-false"
                  onClick={[Function]}
                  value={6}
                >
                  duff
                </button>,
                <button
                  className="active-false"
                  onClick={[Function]}
                  value={5}
                >
                  slice
                </button>,
              ],
              "className": "bad-shot",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "hook",
                  "className": "active-false",
                  "onClick": [Function],
                  "value": 1,
                },
                "ref": null,
                "rendered": "hook",
                "type": "button",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "duff",
                  "className": "active-false",
                  "onClick": [Function],
                  "value": 6,
                },
                "ref": null,
                "rendered": "duff",
                "type": "button",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "slice",
                  "className": "active-false",
                  "onClick": [Function],
                  "value": 5,
                },
                "ref": null,
                "rendered": "slice",
                "type": "button",
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Save Shot",
          "className": "save-shot",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": "Save Shot",
        "type": "button",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h2>
            rate your shot
          </h2>,
          <div
            className="ratings-area"
          >
            <div
              className="great-shot"
            >
              <button
                className="active-false"
                onClick={[Function]}
                value={3}
              >
                great
              </button>
            </div>
            <div
              className="ok-shot"
            >
              <button
                className="active-false"
                onClick={[Function]}
                value={2}
              >
                pull
              </button>
              <button
                className="active-false"
                onClick={[Function]}
                value={4}
              >
                push
              </button>
            </div>
            <div
              className="bad-shot"
            >
              <button
                className="active-false"
                onClick={[Function]}
                value={1}
              >
                hook
              </button>
              <button
                className="active-false"
                onClick={[Function]}
                value={6}
              >
                duff
              </button>
              <button
                className="active-false"
                onClick={[Function]}
                value={5}
              >
                slice
              </button>
            </div>
          </div>,
          <button
            className="save-shot"
            onClick={[Function]}
          >
            Save Shot
          </button>,
        ],
        "className": "ratings",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "rate your shot",
          },
          "ref": null,
          "rendered": "rate your shot",
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="great-shot"
              >
                <button
                  className="active-false"
                  onClick={[Function]}
                  value={3}
                >
                  great
                </button>
              </div>,
              <div
                className="ok-shot"
              >
                <button
                  className="active-false"
                  onClick={[Function]}
                  value={2}
                >
                  pull
                </button>
                <button
                  className="active-false"
                  onClick={[Function]}
                  value={4}
                >
                  push
                </button>
              </div>,
              <div
                className="bad-shot"
              >
                <button
                  className="active-false"
                  onClick={[Function]}
                  value={1}
                >
                  hook
                </button>
                <button
                  className="active-false"
                  onClick={[Function]}
                  value={6}
                >
                  duff
                </button>
                <button
                  className="active-false"
                  onClick={[Function]}
                  value={5}
                >
                  slice
                </button>
              </div>,
            ],
            "className": "ratings-area",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <button
                  className="active-false"
                  onClick={[Function]}
                  value={3}
                >
                  great
                </button>,
                "className": "great-shot",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "great",
                  "className": "active-false",
                  "onClick": [Function],
                  "value": 3,
                },
                "ref": null,
                "rendered": "great",
                "type": "button",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <button
                    className="active-false"
                    onClick={[Function]}
                    value={2}
                  >
                    pull
                  </button>,
                  <button
                    className="active-false"
                    onClick={[Function]}
                    value={4}
                  >
                    push
                  </button>,
                ],
                "className": "ok-shot",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "pull",
                    "className": "active-false",
                    "onClick": [Function],
                    "value": 2,
                  },
                  "ref": null,
                  "rendered": "pull",
                  "type": "button",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "push",
                    "className": "active-false",
                    "onClick": [Function],
                    "value": 4,
                  },
                  "ref": null,
                  "rendered": "push",
                  "type": "button",
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <button
                    className="active-false"
                    onClick={[Function]}
                    value={1}
                  >
                    hook
                  </button>,
                  <button
                    className="active-false"
                    onClick={[Function]}
                    value={6}
                  >
                    duff
                  </button>,
                  <button
                    className="active-false"
                    onClick={[Function]}
                    value={5}
                  >
                    slice
                  </button>,
                ],
                "className": "bad-shot",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "hook",
                    "className": "active-false",
                    "onClick": [Function],
                    "value": 1,
                  },
                  "ref": null,
                  "rendered": "hook",
                  "type": "button",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "duff",
                    "className": "active-false",
                    "onClick": [Function],
                    "value": 6,
                  },
                  "ref": null,
                  "rendered": "duff",
                  "type": "button",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "slice",
                    "className": "active-false",
                    "onClick": [Function],
                    "value": 5,
                  },
                  "ref": null,
                  "rendered": "slice",
                  "type": "button",
                },
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Save Shot",
            "className": "save-shot",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": "Save Shot",
          "type": "button",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`Ratings should correctly match the snapshot 4`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Ratings
    changeFilter={[MockFunction]}
    club="woods"
    handleData={[MockFunction]}
    random={[MockFunction]}
    setLastShot={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h2>
          rate your shot
        </h2>,
        <div
          className="ratings-area"
        >
          <div
            className="great-shot"
          >
            <button
              className="active-false"
              onClick={[Function]}
              value={3}
            >
              great
            </button>
          </div>
          <div
            className="ok-shot"
          >
            <button
              className="active-false"
              onClick={[Function]}
              value={2}
            >
              pull
            </button>
            <button
              className="active-false"
              onClick={[Function]}
              value={4}
            >
              push
            </button>
          </div>
          <div
            className="bad-shot"
          >
            <button
              className="active-false"
              onClick={[Function]}
              value={1}
            >
              hook
            </button>
            <button
              className="active-false"
              onClick={[Function]}
              value={6}
            >
              duff
            </button>
            <button
              className="active-false"
              onClick={[Function]}
              value={5}
            >
              slice
            </button>
          </div>
        </div>,
        <button
          className="save-shot"
          onClick={[Function]}
        >
          Save Shot
        </button>,
      ],
      "className": "ratings",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "rate your shot",
        },
        "ref": null,
        "rendered": "rate your shot",
        "type": "h2",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="great-shot"
            >
              <button
                className="active-false"
                onClick={[Function]}
                value={3}
              >
                great
              </button>
            </div>,
            <div
              className="ok-shot"
            >
              <button
                className="active-false"
                onClick={[Function]}
                value={2}
              >
                pull
              </button>
              <button
                className="active-false"
                onClick={[Function]}
                value={4}
              >
                push
              </button>
            </div>,
            <div
              className="bad-shot"
            >
              <button
                className="active-false"
                onClick={[Function]}
                value={1}
              >
                hook
              </button>
              <button
                className="active-false"
                onClick={[Function]}
                value={6}
              >
                duff
              </button>
              <button
                className="active-false"
                onClick={[Function]}
                value={5}
              >
                slice
              </button>
            </div>,
          ],
          "className": "ratings-area",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <button
                className="active-false"
                onClick={[Function]}
                value={3}
              >
                great
              </button>,
              "className": "great-shot",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "great",
                "className": "active-false",
                "onClick": [Function],
                "value": 3,
              },
              "ref": null,
              "rendered": "great",
              "type": "button",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <button
                  className="active-false"
                  onClick={[Function]}
                  value={2}
                >
                  pull
                </button>,
                <button
                  className="active-false"
                  onClick={[Function]}
                  value={4}
                >
                  push
                </button>,
              ],
              "className": "ok-shot",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "pull",
                  "className": "active-false",
                  "onClick": [Function],
                  "value": 2,
                },
                "ref": null,
                "rendered": "pull",
                "type": "button",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "push",
                  "className": "active-false",
                  "onClick": [Function],
                  "value": 4,
                },
                "ref": null,
                "rendered": "push",
                "type": "button",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <button
                  className="active-false"
                  onClick={[Function]}
                  value={1}
                >
                  hook
                </button>,
                <button
                  className="active-false"
                  onClick={[Function]}
                  value={6}
                >
                  duff
                </button>,
                <button
                  className="active-false"
                  onClick={[Function]}
                  value={5}
                >
                  slice
                </button>,
              ],
              "className": "bad-shot",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "hook",
                  "className": "active-false",
                  "onClick": [Function],
                  "value": 1,
                },
                "ref": null,
                "rendered": "hook",
                "type": "button",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "duff",
                  "className": "active-false",
                  "onClick": [Function],
                  "value": 6,
                },
                "ref": null,
                "rendered": "duff",
                "type": "button",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "slice",
                  "className": "active-false",
                  "onClick": [Function],
                  "value": 5,
                },
                "ref": null,
                "rendered": "slice",
                "type": "button",
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Save Shot",
          "className": "save-shot",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": "Save Shot",
        "type": "button",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h2>
            rate your shot
          </h2>,
          <div
            className="ratings-area"
          >
            <div
              className="great-shot"
            >
              <button
                className="active-false"
                onClick={[Function]}
                value={3}
              >
                great
              </button>
            </div>
            <div
              className="ok-shot"
            >
              <button
                className="active-false"
                onClick={[Function]}
                value={2}
              >
                pull
              </button>
              <button
                className="active-false"
                onClick={[Function]}
                value={4}
              >
                push
              </button>
            </div>
            <div
              className="bad-shot"
            >
              <button
                className="active-false"
                onClick={[Function]}
                value={1}
              >
                hook
              </button>
              <button
                className="active-false"
                onClick={[Function]}
                value={6}
              >
                duff
              </button>
              <button
                className="active-false"
                onClick={[Function]}
                value={5}
              >
                slice
              </button>
            </div>
          </div>,
          <button
            className="save-shot"
            onClick={[Function]}
          >
            Save Shot
          </button>,
        ],
        "className": "ratings",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "rate your shot",
          },
          "ref": null,
          "rendered": "rate your shot",
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="great-shot"
              >
                <button
                  className="active-false"
                  onClick={[Function]}
                  value={3}
                >
                  great
                </button>
              </div>,
              <div
                className="ok-shot"
              >
                <button
                  className="active-false"
                  onClick={[Function]}
                  value={2}
                >
                  pull
                </button>
                <button
                  className="active-false"
                  onClick={[Function]}
                  value={4}
                >
                  push
                </button>
              </div>,
              <div
                className="bad-shot"
              >
                <button
                  className="active-false"
                  onClick={[Function]}
                  value={1}
                >
                  hook
                </button>
                <button
                  className="active-false"
                  onClick={[Function]}
                  value={6}
                >
                  duff
                </button>
                <button
                  className="active-false"
                  onClick={[Function]}
                  value={5}
                >
                  slice
                </button>
              </div>,
            ],
            "className": "ratings-area",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <button
                  className="active-false"
                  onClick={[Function]}
                  value={3}
                >
                  great
                </button>,
                "className": "great-shot",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "great",
                  "className": "active-false",
                  "onClick": [Function],
                  "value": 3,
                },
                "ref": null,
                "rendered": "great",
                "type": "button",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <button
                    className="active-false"
                    onClick={[Function]}
                    value={2}
                  >
                    pull
                  </button>,
                  <button
                    className="active-false"
                    onClick={[Function]}
                    value={4}
                  >
                    push
                  </button>,
                ],
                "className": "ok-shot",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "pull",
                    "className": "active-false",
                    "onClick": [Function],
                    "value": 2,
                  },
                  "ref": null,
                  "rendered": "pull",
                  "type": "button",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "push",
                    "className": "active-false",
                    "onClick": [Function],
                    "value": 4,
                  },
                  "ref": null,
                  "rendered": "push",
                  "type": "button",
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <button
                    className="active-false"
                    onClick={[Function]}
                    value={1}
                  >
                    hook
                  </button>,
                  <button
                    className="active-false"
                    onClick={[Function]}
                    value={6}
                  >
                    duff
                  </button>,
                  <button
                    className="active-false"
                    onClick={[Function]}
                    value={5}
                  >
                    slice
                  </button>,
                ],
                "className": "bad-shot",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "hook",
                    "className": "active-false",
                    "onClick": [Function],
                    "value": 1,
                  },
                  "ref": null,
                  "rendered": "hook",
                  "type": "button",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "duff",
                    "className": "active-false",
                    "onClick": [Function],
                    "value": 6,
                  },
                  "ref": null,
                  "rendered": "duff",
                  "type": "button",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "slice",
                    "className": "active-false",
                    "onClick": [Function],
                    "value": 5,
                  },
                  "ref": null,
                  "rendered": "slice",
                  "type": "button",
                },
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Save Shot",
            "className": "save-shot",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": "Save Shot",
          "type": "button",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;
